fix: alignment in mobile view

--- a/app/isomorphic/components/login/AccountModal/account-modal.m.css
+++ b/app/isomorphic/components/login/AccountModal/account-modal.m.css
@@ -2,6 +2,7 @@
   .form-wrapper {
     padding: 40px 20px 30px;
     width: 320px;
+    margin: 0 auto;
     @media screen and (min-width: 767px) {
       padding: 40px 40px 30px;
     }
@@ -10,6 +11,7 @@
     display: flex;
     margin-bottom: 30px;
     cursor: pointer;
+    justify-content: center;
   }
   .tab-item {
     padding: 10px;
