--- a/app/isomorphic/components/molecules/SocialLogin/social-login.m.css
+++ b/app/isomorphic/components/molecules/SocialLogin/social-login.m.css
@@ -11,11 +11,7 @@
   .buttons {
     display: flex;
     list-style: none;
-    flex-direction: column;
     justify-content: space-around;
-    @media screen and (min-width: 767px) {
-      flex-direction: row;
-    }
   }
   .button {
     min-width: 110px;
